--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+
+    <!--상단 바 메뉴-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">BigData</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -18,18 +20,27 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Data</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Analysis</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Design Model</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Design Result</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Retro Design</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <div class="container mt-5">
-        <h1>Welcome to Django Home Page!</h1>
-        <p>This is a simple home page built with Django and Bootstrap.</p>
+    <!--메인 페이지-->
+     <div class="container d-flex flex-column justify-content-center align-items-center min-vh-100">
+        <h1 class="font-weight-bold">Welcome</h1>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
