Data.html, MainPage.html 일부코드 수정

--- a/templates/MainPage.html
+++ b/templates/MainPage.html
@@ -20,16 +20,16 @@
                     <a class="nav-link" href="/data">Data</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Analysis</a>
+                    <a class="nav-link" href="/">Analysis</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Design Model</a>
+                    <a class="nav-link" href="/">Design Model</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Design Result</a>
+                    <a class="nav-link" href="/">Design Result</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Retro Design</a>
+                    <a class="nav-link" href="/">Retro Design</a>
                 </li>
             </ul>
         </div>
