--- a/templates/Data.html
+++ b/templates/Data.html
@@ -22,16 +22,16 @@
                     <a class="nav-link" href="/data">Data</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Analysis</a>
+                    <a class="nav-link" href="/">Analysis</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Design Model</a>
+                    <a class="nav-link" href="/">Design Model</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Design Result</a>
+                    <a class="nav-link" href="/">Design Result</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Retro Design</a>
+                    <a class="nav-link" href="/">Retro Design</a>
                 </li>
             </ul>
         </div>
@@ -44,35 +44,44 @@
             <div class="card-body">
                 <h5 class="card-title">Drag and drop a file here</h5>
                 <p class="card-text">Or click the button below to upload a file</p>
-                <input type="file" id="fileElem" multiple accept=".csv" class="form-control" style="display:none">
-                <button class="btn btn-primary" id="fileSelect">File Upload</button>
+                <div class="drop-area">
+                    <form id="file-upload-form" class="upload" method="post" action="{% url 'upload' %}" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <input type="file" id="fileElem" multiple accept=".csv" style="display:none" onchange="handleFiles(this.files)">
+                        <button type="button" class="btn btn-primary" id="fileSelect">Select Files</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
 
     <script>
-        document.getElementById('fileSelect').addEventListener('click', function (e) {
-            let fileElem = document.getElementById('fileElem');
-            if (fileElem) {
-                fileElem.click();
-            }
+        let dropArea = document.getElementById('file-upload-form');
+
+        dropArea.addEventListener('dragenter', handlerFunction, false);
+        dropArea.addEventListener('dragleave', handlerFunction, false);
+        dropArea.addEventListener('dragover', handlerFunction, false);
+        dropArea.addEventListener('drop', handleDrop, false);
+
+        function handlerFunction(e) {
             e.preventDefault();
-        }, false);
+            e.stopPropagation();
+        }
 
-        document.getElementById('fileElem').addEventListener('change', function () {
-            let files = this.files;
-            let formData = new FormData();
-            for (let i = 0; i < files.length; i++) {
-                formData.append('file', files[i]);
-            }
+        function handleDrop(e) {
+            let dt = e.dataTransfer;
+            let files = dt.files;
 
-            fetch('/upload/', {
-                method: 'POST',
-                body: formData,
-            })
-            .then(response => response.json())
-            .then(data => console.log(data))
-            .catch(error => console.error('Error:', error));
+            handleFiles(files);
+        }
+
+        function handleFiles(files) {
+            document.getElementById('fileElem').files = files;
+            document.getElementById('file-upload-form').submit();
+        }
+
+        document.getElementById('fileSelect').addEventListener('click', function () {
+            document.getElementById('fileElem').click();
         }, false);
     </script>
 
@@ -80,6 +89,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
