--- a/templates/Data.html
+++ b/templates/Data.html
@@ -55,6 +55,19 @@
         </div>
     </div>
 
+   <!--업로드 된 파일 목록-->
+   <div class="container mt-5">
+        <h1 class="mb-3">Data List</h1>
+        <!-- 파일 리스트 표시 -->
+        <ul class="list-group">
+            {% for file in files %}
+                <li class="list-group-item">{{ file }}</li>
+            {% empty %}
+                <li class="list-group-item">No files uploaded.</li>
+            {% endfor %}
+        </ul>
+   </div>
+
     <script>
         let dropArea = document.getElementById('file-upload-form');
 
